<resources>
    <string name="app_name">Lummora</string>
    <string name="timer">Timer</string>
    <string name="livros">Livros</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="insights">Insights</string>
    <string name="agenda">Agenda</string>
    <string name="home">Home</string>
    <string name="person">Person</string>
    <string name="add">Add</string>
    <string name="voltar">Voltar</string>
    <string name="apagar_conta">Apagar conta</string>
    <string name="apagar_dados_da_conta">Apagar Dados da Conta</string>
    <string name="tema">Tema</string>
    <string name="logo">Logo</string>
    <string name="name_user">Name User</string>
    <string name="adicione_sua_bio">Adicione sua bio…</string>
    <string name="convidar_amigos">Convidar Amigos</string>
    <string name="calendario">Calendário</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair_da_conta">Sair da conta</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="digite_a_senha">Digite a senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="digite_o_e_mail">Digite o e-mail</string>
    <string name="digite_seu_celular">Digite seu celular</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="conta">Conta</string>
    <string name="lummora">LUMMORA</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="recuperar_email">Recuperar email</string>
    <string name="esqueceu_o_email">Esqueceu o email</string>
    <string name="enviar_email">Enviar email</string>
    <string name="esqueceu_a_senha">Esqueceu a senha</string>
    <string name="seg_14_04">seg., 14/04</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="iniciar_sessao">Iniciar Sessão</string>
    <string name="esqueceu_seu_e_mail">Esqueceu seu e-mail?</string>
    <string name="esqueceu_a_senha_2">Esqueceu a senha?</string>
    <string name="ou">ou</string>
    <string name="iniciar_sessao_com_google">Iniciar sessão com Google</string>
    <string name="tempo_total">Tempo Total</string>
    <string name="media_diaria">Média Diária</string>
    <string name="media_de_foco_semanal">Média de Foco Semanal</string>
    <string name="tempo_por_disciplina">Tempo por Disciplina</string>
    <string name="tempo_por_livro">Tempo por Livro</string>
    <string name="gerar_relatorio">Gerar Relatório</string>
    <string name="maio_25">MAIO / 25</string>
    <string name="play">play</string>
    <string name="nome_da_materia">Nome da matéria</string>
    <string name="_00_00">00:00</string>
    <string name="estude_com_lummora">Estude com Lummora</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="_25_00">25:00</string>
    <string name="_05_00">05:00</string>
    <string name="pausa_curta">Pausa Curta</string>
    <string name="_30_00">30:00</string>
    <string name="pausa_longa">Pausa Longa</string>
    <string name="iniciar">Iniciar</string>
    <string name="pausar">Pausar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="nome_da_tarefa">Nome da tarefa</string>
    <string name="ex_prova_de_logica">Ex: Prova de Lógica</string>
    <string name="tipo">Tipo</string>
    <string name="prova">Prova</string>
    <string name="trabalho">Trabalho</string>
    <string name="tarefa">Tarefa</string>
    <string name="data">Data</string>
    <string name="clique_para_selecionar_uma_data">Clique para selecionar uma data</string>
    <string name="adicionar_nova_disciplina">Adicionar Nova Disciplina</string>
    <string name="editar_disciplina"> Editar disciplina </string>
    <string name="nome_da_disciplina">Nome da Disciplina</string>
    <string name="cor_da_disciplina_ex_rrggbb">Cor da Disciplina (ex: #RRGGBB)</string>
    <string name="definir_tempos_do_pomodoro">Definir Tempos do Pomodoro</string>
    <string name="pomodoro_minutos">Pomodoro (minutos)</string>
    <string name="pausa_curta_minutos">Pausa Curta (minutos)</string>
    <string name="pausa_longa_minutos">Pausa Longa (minutos)</string>
    <string name="adicionar_novo_livro"> Adicionar novo livro </string>
    <string name="nome_do_livro">Nome do Livro</string>
    <string name="editar_livro">Editar livro </string>
    <string name="semana">qua</string>
    <string name="dia">08</string>
    <string name="default_web_client_id">"936887833672-7utat4ehuu685jmt4pvsqppdlnp92gre.apps.googleusercontent.com"</string>


</resources>