<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtNomeTarefa"
        android:text="@string/nome_da_tarefa"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edtNomeTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_prova_de_logica"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tipo"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/radioGroupTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioProva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prova" />

        <RadioButton
            android:id="@+id/radioTrabalho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/trabalho" />

        <RadioButton
            android:id="@+id/radioTarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/tarefa" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/data"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtDataSelecionada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:hint="@string/clique_para_selecionar_uma_data"
        android:padding="12dp"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>