<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Vanilla"
    android:orientation="horizontal"
    android:paddingBottom="1dp"
    tools:context=".ItemTimer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Platinum"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btnIniciarTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/translucide"
            android:contentDescription="@string/play"
            android:src="@drawable/play" />

        <TextView
            android:id="@+id/tituloMateria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/nome_da_materia" />

        <TextView
            android:id="@+id/tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/_00_00" />

    </LinearLayout>

</LinearLayout>