<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_black"
        android:gravity="center"
        android:text="@string/definir_tempos_do_pomodoro"
        android:textColor="@color/Oxford_Blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/pomodoro_minutos"
        app:boxStrokeColor="@color/Oxford_Blue"
        app:hintTextColor="@color/Oxford_Blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pomodoro_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/pausa_curta_minutos"
        app:boxStrokeColor="@color/Oxford_Blue"
        app:hintTextColor="@color/Oxford_Blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_short_break_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/pausa_longa_minutos"
        app:boxStrokeColor="@color/Oxford_Blue"
        app:hintTextColor="@color/Oxford_Blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_long_break_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>