<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Platinum"
    tools:context=".EsqueceuEmail">

    <Button
        android:id="@+id/btnRecuperarEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/YInMn_Blue"
        android:fontFamily="@font/inter_bold"
        android:text="@string/recuperar_email"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail2" />

    <EditText
        android:id="@+id/edtEmail2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="phone"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/digite_seu_celular"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_black"
        android:text="@string/lummora"
        android:textColor="@color/Oxford_Blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toTopOf="@+id/guideline26" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/esqueceu_o_email"
        android:textColor="@color/Dim_Gray"
        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/voltar"
        android:onClick="onVoltar"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:srcCompat="@drawable/voltar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>